[gd_scene load_steps=17 format=3 uid="uid://drfuvfa2alwae"]

[ext_resource type="Script" path="res://scripts/game_board.gd" id="1_0ems2"]
[ext_resource type="Texture2D" uid="uid://dv08upgwx6q4w" path="res://assets/board_tic_tac_toe.png" id="1_66ut2"]
[ext_resource type="Texture2D" uid="uid://dx2cxrlis1hni" path="res://assets/back_image2.png" id="2_lyjl8"]
[ext_resource type="Texture2D" uid="uid://cmns40mq3sthj" path="res://assets/cross_circle.png" id="2_pxp2t"]
[ext_resource type="Texture2D" uid="uid://ljmliq0006o7" path="res://assets/restart_button.png" id="5_58ngg"]
[ext_resource type="Texture2D" uid="uid://d1btgvkwhqj1m" path="res://assets/white_button.png" id="5_pi21x"]
[ext_resource type="Texture2D" uid="uid://ru7buxg7p0ja" path="res://assets/quit_button.png" id="6_dl8oc"]
[ext_resource type="Texture2D" uid="uid://cofd4gcwkatop" path="res://assets/green_button.png" id="6_s8uei"]
[ext_resource type="Texture2D" uid="uid://dm354e1vx55h7" path="res://assets/blue_button.png" id="7_hoj18"]
[ext_resource type="Texture2D" uid="uid://cd6he6xybdaty" path="res://assets/winner.png" id="10_f8rsp"]
[ext_resource type="Texture2D" uid="uid://fu3tkdgtppcg" path="res://assets/winner_button.png" id="11_bhuuh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2rvpd"]
texture = ExtResource("1_66ut2")
separation = Vector2i(10, 0)
texture_region_size = Vector2i(50, 50)
use_texture_padding = false
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_k3tok"]
sources/0 = SubResource("TileSetAtlasSource_2rvpd")

[sub_resource type="AtlasTexture" id="AtlasTexture_7m8iw"]
atlas = ExtResource("2_pxp2t")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n55ev"]
atlas = ExtResource("2_pxp2t")
region = Rect2(16, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qjtuh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7m8iw")
}],
"loop": true,
"name": &"circle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n55ev")
}],
"loop": true,
"name": &"cross",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="Game Board" type="Node2D"]
script = ExtResource("1_0ems2")

[node name="BackImage2" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(12.5217, 12)
texture = ExtResource("2_lyjl8")

[node name="Board" type="TileMap" parent="."]
position = Vector2(-280, -35)
scale = Vector2(9, 9)
tile_set = SubResource("TileSet_k3tok")
format = 2
layer_0/name = "White"
layer_0/y_sort_enabled = true
layer_0/navigation_enabled = false
layer_0/tile_data = PackedInt32Array(131076, 0, 0)
layer_1/name = "Green"
layer_1/enabled = false
layer_1/tile_data = PackedInt32Array(131076, 65536, 0)
layer_2/name = "Blue"
layer_2/enabled = false
layer_2/tile_data = PackedInt32Array(131076, 131072, 0)

[node name="b0" type="Button" parent="Board" groups=["circle_or_cross"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 47.8
offset_top = 15.6
offset_right = 62.8
offset_bottom = 30.6
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
icon_alignment = 1

[node name="s0" type="AnimatedSprite2D" parent="Board/b0"]
visible = false
position = Vector2(7.6, 7.6)
sprite_frames = SubResource("SpriteFrames_qjtuh")
animation = &"cross"

[node name="b1" type="Button" parent="Board" groups=["circle_or_cross"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.4
offset_top = 15.6
offset_right = 79.4
offset_bottom = 30.6
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
icon_alignment = 1

[node name="s1" type="AnimatedSprite2D" parent="Board/b1"]
visible = false
position = Vector2(7.6, 7.6)
sprite_frames = SubResource("SpriteFrames_qjtuh")
animation = &"circle"

[node name="b2" type="Button" parent="Board" groups=["circle_or_cross"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 81.2
offset_top = 15.8
offset_right = 96.2
offset_bottom = 30.8
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
icon_alignment = 1

[node name="s2" type="AnimatedSprite2D" parent="Board/b2"]
visible = false
position = Vector2(7.6, 7.6)
sprite_frames = SubResource("SpriteFrames_qjtuh")
animation = &"circle"

[node name="b3" type="Button" parent="Board" groups=["circle_or_cross"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 48.0
offset_top = 32.6
offset_right = 63.0
offset_bottom = 47.6
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
icon_alignment = 1

[node name="s3" type="AnimatedSprite2D" parent="Board/b3"]
visible = false
position = Vector2(7.6, 7.6)
sprite_frames = SubResource("SpriteFrames_qjtuh")
animation = &"circle"

[node name="b4" type="Button" parent="Board" groups=["circle_or_cross"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.4
offset_top = 32.6
offset_right = 79.4
offset_bottom = 47.6
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
icon_alignment = 1

[node name="s4" type="AnimatedSprite2D" parent="Board/b4"]
visible = false
position = Vector2(7.6, 7.6)
sprite_frames = SubResource("SpriteFrames_qjtuh")
animation = &"circle"

[node name="b5" type="Button" parent="Board" groups=["circle_or_cross"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 81.2
offset_top = 32.6
offset_right = 96.2
offset_bottom = 47.6
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
icon_alignment = 1

[node name="s5" type="AnimatedSprite2D" parent="Board/b5"]
visible = false
position = Vector2(7.6, 7.6)
sprite_frames = SubResource("SpriteFrames_qjtuh")
animation = &"circle"

[node name="b6" type="Button" parent="Board" groups=["circle_or_cross"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 47.8
offset_top = 49.4
offset_right = 62.8
offset_bottom = 64.4
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
icon_alignment = 1

[node name="s6" type="AnimatedSprite2D" parent="Board/b6"]
visible = false
position = Vector2(7.6, 7.6)
sprite_frames = SubResource("SpriteFrames_qjtuh")
animation = &"circle"

[node name="b7" type="Button" parent="Board" groups=["circle_or_cross"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.4
offset_top = 49.4
offset_right = 79.4
offset_bottom = 64.4
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
icon_alignment = 1

[node name="s7" type="AnimatedSprite2D" parent="Board/b7"]
visible = false
position = Vector2(7.6, 7.6)
sprite_frames = SubResource("SpriteFrames_qjtuh")
animation = &"circle"

[node name="b8" type="Button" parent="Board" groups=["circle_or_cross"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 81.2
offset_top = 49.4
offset_right = 96.2
offset_bottom = 64.4
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
icon_alignment = 1

[node name="s8" type="AnimatedSprite2D" parent="Board/b8"]
visible = false
position = Vector2(7.6, 7.6)
sprite_frames = SubResource("SpriteFrames_qjtuh")
animation = &"circle"

[node name="Reset" type="Button" parent="."]
offset_left = 873.0
offset_top = 439.0
offset_right = 999.0
offset_bottom = 477.0
scale = Vector2(1.5, 1.5)
icon = ExtResource("5_58ngg")
flat = true

[node name="Quit" type="Button" parent="."]
offset_left = 945.0
offset_top = 504.0
offset_right = 1023.0
offset_bottom = 542.0
scale = Vector2(1.5, 1.5)
icon = ExtResource("6_dl8oc")
flat = true

[node name="Color Box" type="HFlowContainer" parent="."]
offset_left = 868.0
offset_top = 91.0
offset_right = 963.0
offset_bottom = 215.0
scale = Vector2(2, 2)
alignment = 1
last_wrap_alignment = 2

[node name="White Box" type="Button" parent="Color Box"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("5_pi21x")
flat = true

[node name="Green Box" type="Button" parent="Color Box"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("6_s8uei")
flat = true

[node name="Blue Box" type="Button" parent="Color Box"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("7_hoj18")
flat = true

[node name="Winner" type="Sprite2D" parent="."]
position = Vector2(731, 326)
scale = Vector2(18.909, 20.8)
texture = ExtResource("10_f8rsp")

[node name="winner_icon" type="AnimatedSprite2D" parent="Winner"]
position = Vector2(-2.38419e-06, -4.76837e-07)
scale = Vector2(0.554326, 0.514228)
sprite_frames = SubResource("SpriteFrames_qjtuh")
animation = &"new_animation"

[node name="w_1" type="Sprite2D" parent="Winner"]
position = Vector2(-4.76837e-07, -0.0222223)
scale = Vector2(0.07, 0.07)
texture = ExtResource("11_bhuuh")

[connection signal="button_down" from="Board/b0" to="." method="_on_b_0_button_down"]
[connection signal="button_down" from="Board/b1" to="." method="_on_b_1_button_down"]
[connection signal="button_down" from="Board/b2" to="." method="_on_b_2_button_down"]
[connection signal="button_down" from="Board/b3" to="." method="_on_b_3_button_down"]
[connection signal="button_down" from="Board/b4" to="." method="_on_b_4_button_down"]
[connection signal="button_down" from="Board/b5" to="." method="_on_b_5_button_down"]
[connection signal="button_down" from="Board/b6" to="." method="_on_b_6_button_down"]
[connection signal="button_down" from="Board/b7" to="." method="_on_b_7_button_down"]
[connection signal="button_down" from="Board/b8" to="." method="_on_b_8_button_down"]
[connection signal="button_down" from="Reset" to="." method="_on_reset_button_down"]
[connection signal="button_down" from="Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="Color Box/White Box" to="." method="_on_white_box_button_down"]
[connection signal="button_down" from="Color Box/Green Box" to="." method="_on_green_box_button_down"]
[connection signal="button_down" from="Color Box/Blue Box" to="." method="_on_blue_box_button_down"]
